[package]
name = "zkp_interface"
version = "0.1.0"
authors = ["@sam.leder-tno <sam.leder@tno.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12"
dioxus = { version = "0.6", features = ["web", "logger"] }
tokio = "1.48.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
